# runanywhere-sdks

./: .gitignore  Package.swift
examples/ios/RunAnywhereAI/RunAnywhereAI/App/: ContentView.swift
examples/ios/RunAnywhereAI/RunAnywhereAI/Features/PaytmDemo/: PaytmMerchantDashboard.swift  PaytmVoiceAssistantViewModel.swift  PaytmVoicePaymentView.swift
sdk/runanywhere-commons/: CMakeLists.txt  VERSIONS
sdk/runanywhere-commons/cmake/: FetchONNXRuntime.cmake  LoadVersions.cmake
sdk/runanywhere-commons/include/rac/backends/: rac_stt_onnx.h  rac_tts_onnx.h  rac_vad_onnx.h
sdk/runanywhere-commons/include/rac/features/stt/: rac_stt_types.h
sdk/runanywhere-commons/include/rac/features/tts/: rac_tts_types.h
sdk/runanywhere-commons/include/rac/features/vad/: rac_vad_types.h
sdk/runanywhere-commons/scripts/: build-windows.bat  load-versions.sh
sdk/runanywhere-commons/src/backends/onnx/: CMakeLists.txt  onnx_backend.cpp  rac_backend_onnx_register.cpp  rac_str_trans.cpp  rac_str_trans.h  wakeword_onnx.cpp
sdk/runanywhere-commons/src/features/: result_free.cpp
sdk/runanywhere-commons/src/features/embeddings/: rac_embeddings_service.cpp
sdk/runanywhere-commons/src/features/llm/: rac_llm_service.cpp
sdk/runanywhere-commons/src/features/stt/: rac_stt_service.cpp
sdk/runanywhere-commons/src/features/tts/: rac_tts_service.cpp
sdk/runanywhere-commons/src/features/vlm/: vlm_component.cpp
sdk/runanywhere-commons/src/infrastructure/telemetry/: telemetry_json.cpp
sdk/runanywhere-swift/Modules/WhisperKitTranscription/Sources/WhisperKitTranscription/: WhisperKitService.swift
sdk/runanywhere-swift/Sources/RunAnywhere/Foundation/Constants/: BuildToken.swift
thoughts/shared/plans/: backend_model_fetching.md  network-layer-implementation-status.md  network-layer-implementation.md
